[project]
name = "orbix"
version = "0.1.0"
description = "a considered approach to the Roblox API."
authors = [
    { name = "bramazine" }
]
readme = "DOCUMENTATION.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
